...
        let image = isLiked
        ? UIImage(named: "like_active")
        : UIImage(named: "like_not_active")
        likeButton.setImage(image, for: .normal)
        
        if isLiked {
            likeButton.accessibilityIdentifier = "like button on"
        } else {
            likeButton.accessibilityIdentifier = "like button off"
        }
    }
    
    func showSkeleton() {
        guard animationLayers.isEmpty else { return }
        
...
