...
    weak var delegate: WebViewViewControllerDelegate?
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        setupWebView()
        presenter?.viewDidLoad()
    }
    
    func load(request: URLRequest) {
        webView.load(request)
...
